<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/inventory_medicine"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/smartHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:fontFamily="@font/inter_bold"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/profile_picture"
            android:fontFamily="@font/inter_regular"
            android:text="O"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/formGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="7dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/smartHealth">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/fillByScan"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/scan"
                    android:onClick="AddNewMedicineButton"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fillByScan"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/fillForm"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/fillform"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fillByForm"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- Button 3 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/fillFormByHistory"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/formhistory"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fillByHistory"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/main_content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:background="@drawable/main_content_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:paddingVertical="32dp"
            android:paddingHorizontal="16dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/slide_view_inventory"
                android:textColor="#101010"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/inventory_pills"
                android:textColor="#101010"
                android:textSize="16sp" />

            <View
                android:id="@+id/pill"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/pill1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/inventory_liquids"
                android:textColor="#101010"
                android:textSize="16sp" />

            <View
                android:id="@+id/liquids"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/inventory_others"
                android:textColor="#101010"
                android:textSize="16sp"/>
            <View
                android:id="@+id/others"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />



        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/navbar_camera_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/navbar_camera"
        app:layout_constraintBottom_toBottomOf="@+id/inventory_medicine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        <View
            android:layout_height="8dp"
            android:layout_width="match_parent"
            android:background="@drawable/navbar_gradient_top"
            />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/navbar_background"
            android:gravity="center">

            <Button
                android:id="@+id/navbar_home_btn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp"
                android:background="#aaffaa" />

            <Button
                android:id="@+id/navbar_inventory_btn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginVertical="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="100dp"
                android:background="#aaffaa" />

            <Button
                android:id="@+id/navbar_medbot_btn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp"
                android:background="#aaffaa" />

            <Button
                android:id="@+id/navbar_user_btn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp"
                android:background="#aaffaa" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>