<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/inventory_medicine"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/smartHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:fontFamily="@font/inter_bold"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/profile_picture"
            android:fontFamily="@font/inter_regular"
            android:text="O"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/formGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="7dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/smartHealth">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/fillByScan"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/scan"
                    android:clickable="true"
                    android:onClick="createNewContainer"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fillByScan"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/fillForm"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/fillform"
                    android:clickable="true"
                    android:onClick="createNewContainer"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fillByForm"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- Button 3 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/fillFormByHistory"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:background="@drawable/formhistory"
                    android:onClick="createNewContainer"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fillByHistory"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_content_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="195dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/main_content_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-16dp">

        <LinearLayout
            android:id="@+id/try123"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="32dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/slide_view_inventory"
                android:textColor="#101010"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/inventory_pills"
                    android:textColor="#101010"
                    android:textSize="16sp" />


                <ImageView
                    android:id="@+id/pillsCollapse"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:clickable="true"
                    android:src="@drawable/arrow_down">
                </ImageView>
            </LinearLayout>

            <View
                android:id="@+id/pill"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pillsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </androidx.recyclerview.widget.RecyclerView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/inventory_liquids"
                    android:textColor="#101010"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/liquidsCollapse"
                    android:clickable="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrow_down"
                    android:layout_gravity="end">
                </ImageView>

            </LinearLayout>

            <View
                android:id="@+id/liquids"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/liquidsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </androidx.recyclerview.widget.RecyclerView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/inventory_others"
                    android:textColor="#101010"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/othersCollapse"
                    android:clickable="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrow_down"
                    android:layout_gravity="end">
                </ImageView>

            </LinearLayout>

            <View
                android:id="@+id/others"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/othersRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>