<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/back_arrow"
            android:scaleX="1"
            android:scaleY="1"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            >
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fill With History"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/inter_bold"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingVertical="15dp"
            >
        </TextView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:background="@color/white"
        >
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/search_bar_bg"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            >
        </androidx.appcompat.widget.SearchView>
        <ImageView
            android:id="@+id/displayImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:background="@color/medicine_gray"
            android:contentDescription="@string/medicine_image"
            >
        </ImageView>
        <TextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/displayImage"
            app:layout_constraintStart_toStartOf="parent"
            >
        </TextView>
        <LinearLayout
            android:id="@+id/displayTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/displayName"
            app:layout_constraintStart_toStartOf="parent"
            >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/displayTag"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp"
                >
            </TextView>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountInput"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginHorizontal="20dp"
                android:hint="Key in Amount"
                android:gravity="center"

            >
        </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/addByHistory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/confirm"
            android:textSize="25sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:textColor="@color/white"
            >
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>